# graph-data-generator-streamlit

./: .gitignore  README.md  pyproject.toml
graph_data_generator_streamlit/: app.py
graph_data_generator_streamlit/managers/: n4j_manager.py
graph_data_generator_streamlit/tabs/: config_tab.py  design_tab.py  generate_tab.py  instructions_tab.py
graph_data_generator_streamlit/ui/: config_ui.py  generate_ui.py
tests/: test_design_tab.py
