[tool.poetry]
name = "graph-data-generator-streamlit"
version = "0.1.0"
description = ""
authors = ["Jason Koo <jalakoo@gmail.com>"]
readme = "README.md"
packages = [{include = "graph_data_generator_streamlit"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.24.1"
graph-data-generator = {path = "/Users/jasonkoo/jason/repos/graph-data-generator", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
