[tool.poetry]
name = "graph-data-generator-streamlit"
version = "0.1.0"
description = ""
authors = ["Jason Koo <jalakoo@gmail.com>"]
readme = "README.md"
packages = [{include = "graph_data_generator_streamlit"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.24.1"
graph-data-generator = {path = "/Users/jasonkoo/neo4j/repos/graph-data-generator", develop = true}
streamlit-player = "^0.1.5"
streamlit-extras = "^0.3.0"
neomodel = "^5.1.2"
neo4j-uploader = {path = "/Users/jasonkoo/neo4j/repos/neo4j-uploader", develop = true}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
